Fix dark mode rounded corners

--- a/packages/forms/resources/css/components/code-editor.css
+++ b/packages/forms/resources/css/components/code-editor.css
@@ -1,5 +1,7 @@
 .fi-fo-code-editor {
     & .cm-editor {
+        @apply rounded-lg;
+
         &.cm-focused {
             @apply outline-none!;
         }
